# translator-by-speech

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt
data/: load.py  setup.py
model/: whisper.py
src/: helpers.py
src/translator_by_speech/: default.py  record.py  translator.py
tests/: test_record.py  test_translate.py
translator_by_speech/: cli.py  constants.py  main.py  pipeline.py  record.py  speech_recognition.py  translator.py
utils/: const.py  metric.py
