[project]
name = "translator_by_speech"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "build>=1.2.2.post1",
    "librosa>=0.10.2.post1",
    "loguru>=0.7.3",
    "matplotlib>=3.10.0",
    "pip>=24.3.1",
    "protobuf>=5.29.3",
    "pytest-mock>=3.14.0",
    "sentencepiece>=0.2.0",
    "setuptools>=75.8.0",
    "sounddevice>=0.5.1",
    "soundfile>=0.13.0",
    "torch>=2.5.1",
    "transformers>=4.48.0",
    "wave>=0.0.2",
]


[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.9.2",
]

[tool.ruff]
indent-width = 2

[tool.pytest.ini.options]
pythonpath = "src"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

